[project]
name = "atopgpu-viz"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "lcd@dmi.dk"},
]
dependencies = [
    "pandas>=2.2.2",
    "panel>=1.4.4",
    "holoviews>=1.19.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
]
